tests/NormalTests/paczka1/fuzzy1/66701197.err
Error in line 3: LRzzukH7RG A852 92,3
Error in line 4: g8Y A140 80,5
Error in line 14: LRzzukH7RG A134 90,7
Error in line 13: g8Y A852 39,5
Error in line 28: MI2lp5 A852 46,6
Error in line 23: g8Y A134 42,7
Error in line 29: clrYjq A140 63,2
Error in line 27: A140 S510 4,6
Error in line 33: A140 A134 32,5
Error in line 30: MI2lp5 S510 63,6
Error in line 35: MI2lp5 A852 0,8
Error in line 31: g8Y A140 16,4
Error in line 36: MI2lp5 A140 68,7
